objects/Wave_Summary__c.object
<CustomObject>
    <description>Summarised Survey results for field.</description>
    <fields>
        <fullName>Action_Team_or_Youth_Board__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will allow TCS to link their YB to their YB baseline surey results</description>
        <label>Action Team or Youth Board</label>
        <referenceTo>Action_Team_Youth_Board__c</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cluster_name__c</fullName>
        <label>Cluster name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>SCaW</fullName>
                </value>
                <value>
                    <fullName>Black Country</fullName>
                </value>
                <value>
                    <fullName>LANCS</fullName>
                </value>
                <value>
                    <fullName>MANC</fullName>
                </value>
                <value>
                    <fullName>Micro</fullName>
                </value>
                <value>
                    <fullName>BETHH</fullName>
                </value>
                <value>
                    <fullName>BBLG</fullName>
                </value>
                <value>
                    <fullName>BAD WHRN</fullName>
                </value>
                <value>
                    <fullName>HEK</fullName>
                </value>
                <value>
                    <fullName>MAK</fullName>
                </value>
                <value>
                    <fullName>HRW</fullName>
                </value>
                <value>
                    <fullName>CHIW</fullName>
                </value>
                <value>
                    <fullName>SLC</fullName>
                </value>
                <value>
                    <fullName>SSH</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Event</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only AM training feedback survey summaries can be attached to HR Events</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>AM training feedback</value>
            </filterItems>
            <filterItems>
                <field>HR_Event__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Training</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HR_Event__c</referenceTo>
        <relationshipLabel>Survey Summaries</relationshipLabel>
        <relationshipName>Survey_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_NCS_Surveys__c</fullName>
        <label>Number of NCS Surveys</label>
        <summaryForeignKey>Survey__c.Wave_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WaveSum_TCN_Id__c</fullName>
        <description>Unique external id of the Wave Summary record</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique external id of the Wave Summary record</inlineHelpText>
        <label>WaveSum TCN Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Wave_Summary_Number__c</fullName>
        <formula>IF(CONTAINS(Name, &quot;01&quot;), &quot;01&quot;,
IF(CONTAINS(Name, &quot;02&quot;), &quot;02&quot;,
IF(CONTAINS(Name, &quot;03&quot;), &quot;03&quot;,
IF(CONTAINS(Name, &quot;04&quot;), &quot;04&quot;,
IF(CONTAINS(Name, &quot;05&quot;), &quot;05&quot;,
IF(CONTAINS(Name, &quot;06&quot;), &quot;06&quot;,
IF(CONTAINS(Name, &quot;07&quot;), &quot;07&quot;,
IF(CONTAINS(Name, &quot;08&quot;), &quot;08&quot;,
IF(CONTAINS(Name, &quot;09&quot;), &quot;09&quot;,
IF(CONTAINS(Name, &quot;10&quot;), &quot;10&quot;,
IF(CONTAINS(Name, &quot;11&quot;), &quot;11&quot;,
IF(CONTAINS(Name, &quot;12&quot;), &quot;12&quot;,
NULL))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave Summary Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_number__c</fullName>
        <formula>IF(
(LEFT(RIGHT( Name ,2),1)=&quot; &quot;),
RIGHT(Name,1),
IF(
ISNUMBER(RIGHT(Name,2)),
RIGHT(Name,2),
LEFT(RIGHT(Name,3),2)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Survey Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WaveSum_TCN_Id__c</columns>
        <columns>Cluster__c</columns>
        <columns>Cluster_name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>HR_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TCS_Summaries</fullName>
        <columns>NAME</columns>
        <columns>WaveSum_TCN_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cluster__c</columns>
        <columns>Cluster_name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Wave_Summary__c.TCS_Surveys_2012_2013</value>
        </filters>
        <label>TCS Summaries</label>
        <sharedTo>
            <group>Allexcludingfranchisepartners186351</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Summaries</pluralLabel>
    <recordTypes>
        <fullName>AM_training_feedback</fullName>
        <active>true</active>
        <label>AM training feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Surveys_2014</fullName>
        <active>true</active>
        <label>Summer Surveys 2014</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_surveys_2012</fullName>
        <active>true</active>
        <label>Summer surveys 2012</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_surveys_2013</fullName>
        <active>true</active>
        <label>Summer surveys 2013</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Summaries_2015</fullName>
        <active>true</active>
        <label>Survey Summaries 2015</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Summaries_2016</fullName>
        <active>true</active>
        <label>Survey Summaries 2016</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS_Surveys_2012_2013</fullName>
        <active>true</active>
        <label>TCS Surveys 2012-2013</label>
    </recordTypes>
    <recordTypes>
        <fullName>YB_Baseline</fullName>
        <active>true</active>
        <label>YB Baseline</label>
    </recordTypes>
    <recordTypes>
        <fullName>YB_Session</fullName>
        <active>true</active>
        <label>YB Session</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>